<resources>
    <string name="app_name">Exercise2</string>
    <string name="spaceship">Spaceship</string>
    <string name="move_left">Move left</string>
    <string name="move_right">Move right</string>
    <string name="hp">hp</string>
    <string name="obstacle">Obstacle</string>
    <string name="menu_title">Menu</string>
    <string name="fast_mode">Fast</string>
    <string name="start_button_mode">Start Button Mode</string>
    <string name="start_sensor_mode">Start Sensor Mode</string>
    <string name="top_ten">Top Ten</string>
</resources>
